--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,7 +5,10 @@ header {
 }
 .container {
     background-color: gray;
-    position: fixed;
+    left: 100px;
+    right: 100px;
+    float: center;
+    /* position: fixed; */
 }
 .column {
     border: 2px solid;
@@ -17,7 +20,7 @@ header {
     float: left;
     background-color: rgb(14, 176, 226);
     text-align: center;
-    position: absolute;
+    /* position: absolute; */
 }
 .main-display {
     height: 600px;
@@ -26,7 +29,7 @@ header {
     float: right;
     background-color: rgb(14, 176, 226);
     text-align: center;
-    position: relative;
+    /* position: relative; */
 }
 .news-feed {
     height: 300px;
@@ -35,17 +38,16 @@ header {
     text-align: center;
     text-decoration: bold;
     font-size: 25px;
-    position: absolute;
 }
 .panel-body {
-   position: static;
+   /* position: static; */
    float: right;
 }
 .panel-body2 {
     float: right;
-    position: static;
+    /* position: static; */
 }
 .panel-body3 {
     float: right;
-    position: static;
+    /* position: static; */
 }
