--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -15,21 +15,21 @@ header {
 }
 .left-nav {
     height: 600px;
-    width: 150px;
+    width: 220px;
     border: 2px solid;
     float: left;
     background-color: rgb(14, 176, 226);
     text-align: center;
-    /* position: absolute; */
+    position: absolute;
 }
 .main-display {
     height: 600px;
-    width: 900px;
+    width: 760px;
     border: 2px solid;
     float: right;
     background-color: rgb(14, 176, 226);
     text-align: center;
-    /* position: relative; */
+    position: relative;
 }
 .news-feed {
     height: 300px;
