--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -28,7 +28,7 @@ header {
     height: 600px;
     width: 220px;
     border: 2px solid;
-    float: left;
+    float: right;
     background-color: rgb(14, 176, 226);
     text-align: center;
     position: absolute;
@@ -37,7 +37,7 @@ header {
     height: 600px;
     width: 900px;
     border: 2px solid;
-    float: right;
+    float: left;
     /* background-image: url('../images/borat.jpg');  */
     text-align: center;
     position: relative;
@@ -49,6 +49,7 @@ header {
     text-align: center;
     text-decoration: bold;
     font-size: 25px;
+    /* position: ; */
 }
 .panel-body {
    /* position: static; */
