--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,7 @@
+.container {
+    background-color: gray;
+}
+
 #logo{
     background-image: url('../images/stock-exchange-chart.jpg'); 
     color: white;
@@ -5,55 +9,34 @@
     padding: 5%;
     margin-top: 5%;
     margin-bottom: 5%;
-    height: 100%;
-  }
-h1{
-    font-size: 50px;
-}
-header {
-    height: 150px;
-    background-color: rgb(14, 176, 226);
-    text-align: center;
-}
-.container {
-    background-color: gray;
-    left: 100px;
-    right: 100px;
-    float: center;
-    /* position: fixed; */
 }
 
-
-.left-nav {
-    height: 600px;
-    width: 220px;
-    border: 2px solid;
-    float: right;
-    background-color: rgb(14, 176, 226);
-    text-align: center;
-    position: absolute;
-}
+.left-nav,
 .main-display {
     height: 600px;
-    width: 900px;
-    border: 2px solid;
-    float: left;
-    /* background-image: url('../images/borat.jpg');  */
-    text-align: center;
-    position: relative;
 }
+
+.left-nav,
+.main-display,
+.news-feed {
+    background-color: rgb(14, 176, 226);
+    padding: 15px;
+    border: 2px solid;
+    width: 100%;
+    text-align: center;
+}
+
 .news-feed {
     height: 300px;
-    background-color: rgb(14, 176, 226);
     clear: both; 
-    text-align: center;
-    text-decoration: bold;
     font-size: 25px;
-    /* position: ; */
+    font-weight: "strong"; /* NOT WORKING? */
 }
-.panel-body {
-   /* position: static; */
-   float: right;
-}
-.basic-calculator, .stock-buy-calc, .stock-sell-calc{
+
+
+/* Invisible */
+.basic-calculator,
+.stock-buy-calc,
+.stock-sell-calc {
     display: none;
+}
