--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,3 @@
-.container {
-    background-color: gray;
-}
-
 #logo{
     background-image: url('../images/stock-exchange-chart.jpg'); 
     color: white;
@@ -9,58 +5,56 @@
     padding: 5%;
     margin-top: 5%;
     margin-bottom: 5%;
+    height: 100%;
+  }
+h1{
+    font-size: 50px;
 }
-
-.left-nav,
-.main-display {
-    height: 600px;
-}
-
-.left-nav,
-.main-display,
-.news-feed {
+header {
+    height: 150px;
     background-color: rgb(14, 176, 226);
-    padding: 15px;
-    border: 2px solid;
-    width: 100%;
     text-align: center;
 }
+.container {
+    background-color: gray;
+    left: 100px;
+    right: 100px;
+    float: center;
+    /* position: fixed; */
+}
 
+
+.left-nav {
+    height: 600px;
+    width: 220px;
+    border: 2px solid;
+    float: right;
+    background-color: rgb(14, 176, 226);
+    text-align: center;
+    position: absolute;
+}
+.main-display {
+    height: 600px;
+    width: 900px;
+    border: 2px solid;
+    float: left;
+    /* background-image: url('../images/borat.jpg');  */
+    text-align: center;
+    position: relative;
+}
 .news-feed {
     height: 300px;
+    background-color: rgb(14, 176, 226);
     clear: both; 
+    text-align: center;
+    text-decoration: bold;
     font-size: 25px;
-    font-weight: "strong"; /* NOT WORKING? */
+    /* position: ; */
 }
-<<<<<<< HEAD
 .panel-body {
    /* position: static; */
    float: right;
 }
-<<<<<<< HEAD
-.panel-body2 {
-    float: right;
-    position: static;
-}
-.panel-body3 {
-    float: right;
-    position: static;
-    float: left;
-}
-.basic-calculator, .stock-buy-calc, .stock-sell-calc {
-    display: none;
-}
-=======
 .basic-calculator, .stock-buy-calc, .stock-sell-calc{
     display: none;
->>>>>>> d378888a1e3df863720ea109970b7632f1154fd1
-=======
-
-
-/* Invisible */
-.basic-calculator,
-.stock-buy-calc,
-.stock-sell-calc {
-    display: none;
 }
->>>>>>> 28889c41bbbdb84669fdaaab3586c0395d3fb9aa
