--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,3 +1,9 @@
+.nav {
+    color: white;
+    background-color: #4caf50;
+}
+
+
 #logo{
     
     color: white;
@@ -37,18 +43,8 @@ header {
 
 .main-display,
 .news-feed {
-<<<<<<< HEAD
-    background-color: rgb(14, 176, 226);
-    text-align: center;
-    position: absolute;
-}
-.main-display {
-    height: 600px;
-    width: 900px;
-=======
     background-color: rgb(173, 189, 189);
     padding: 15px;
->>>>>>> 7f852cabca37941152c4ca2388332818061e598e
     border: 2px solid;
     float: left;
     /* background-image: url('../images/borat.jpg');  */
@@ -77,4 +73,10 @@ header {
 .stock-buy-button {
     left: 200px;
 
+}
+.page-footer,
+.footer-fixed {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
