html/css changes

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -34,8 +34,13 @@ header {
     border: 2px solid;
     float: right;
 }
+.main-display{
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+}
 
-.main-display,
+
 .news-feed {
     background-color: rgb(173, 189, 189);
     padding: 15px;
@@ -44,6 +49,10 @@ header {
     /* background-image: url('../images/borat.jpg');  */
     text-align: center;
     position: relative;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
 }
 
 /* .main-display {
@@ -82,3 +91,32 @@ header {
     width: 100%;
     background-color: green;
 }
+
+
+#search {
+    
+ }
+ 
+ #search input[type="text"] {
+    background: url(search-white.png) no-repeat 10px 6px #fcfcfc ;
+    border: 1px solid #d1d1d1 ;
+    font: bold 12px Arial,Helvetica,Sans-serif;
+    color: #bebebe ;
+    width: 150px;
+    padding: 6px 15px 6px 35px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
+    text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
+    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.15) inset;
+    -webkit-transition: all 0.7s ease 0s;
+    -moz-transition: all 0.7s ease 0s;
+    -o-transition: all 0.7s ease 0s;
+    transition: all 0.7s ease 0s;
+    }
+ 
+ #search input[type="text"]:focus {
+    width: 200px;
+ }
