--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -74,3 +74,28 @@ header {
     width: 100%;
     background-color: green;
 }
+.news-image{
+    height: auto;
+    float: left;
+}
+.news-feed-icon, .headline-title {
+    float: left;
+    margin-right: 20px;
+}
+.company-news {
+    height: 550px;
+    position: relative;
+}
+.news-feed {
+    height: 50px;
+    background-color: white;
+    /* position: absolute; */
+    display: inline-block;
+}
+.headline-title {
+    height: -webkit-fill-available;
+}
+.link-to-article {
+    /* right: 20px; */
+    float: right;
+}
