--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,7 +1,9 @@
 body {
     margin-bottom: 140px;
 }
-
+.collapsible-body{
+    background-color: gray;
+}
 #logo{
     
     color: white;
@@ -10,6 +12,9 @@ body {
     margin-top: 5%;
     margin-bottom: 5%;
     height: 100%;
+  }
+  .brand-logo{
+      margin-left: 40px;
   }
 h1{
     font-size: 50px;
@@ -91,7 +96,7 @@ header {
     background-color: rgb(253, 255, 253);
 }
 .company-news{
-    height: 2700;
+    height: 2700px;
 
 }
 .news-image{
