--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -11,6 +11,9 @@ body {
     margin-bottom: 5%;
     height: 100%;
   }
+  .brand-logo{
+    margin-left: 40px;
+  }
 h1{
     font-size: 50px;
 }
@@ -92,7 +95,7 @@ header {
     background-color: rgb(241, 241, 241);
 }
 .company-news{
-    height: 3125px;
+    height: 2700px;
     
 }
 .news-image{
