--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -159,7 +159,8 @@ header {
  }
  
  #search input[type="text"] {
-    background: url(search-white.png) no-repeat 10px 6px #fcfcfc ;
+    /* background: url(search-white.png) no-repeat 10px 6px #fcfcfc ; */
+    background: no-repeat 10px 6px #fcfcfc ;
     border: 1px solid #d1d1d1 ;
     font: bold 12px Arial,Helvetica,Sans-serif;
     color: #bebebe ;
